--- a/TalentHub.Data/TalentHub.Data.csproj
+++ b/TalentHub.Data/TalentHub.Data.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\TalentHub.Core\TalentHub.Core.csproj" />
     <ProjectReference Include="..\TalentHub.Business\TalentHub.Business.csproj" />
+    <ProjectReference Include="..\TalentHub.Api\TalentHub.Api.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
